[metadata]
name = cabinet
version = 0.0.1
description = NFS export manager
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/crgwilson/cabinet
license = MIT
license_file = LICENSE

[options]
packages = find:
install_requires =
  bcrypt
  flask
  flask-migrate
  flask-restful
  flask-sqlalchemy
  marshmallow
  pyjwt
python_requires = >=3.8.1

[options.packages.find]
exclude = tests*

[flake8]
# Include errors from flake8 plugins:
#   B / B9 - BugBear
#   BLK - Black
#   I - Import order
#   S - Bandit
select = B,B9,BLK,C,E,F,I,S,W
# select = B,B9,BLK,C,D,E,F,I,S,W

max-complexity = 10
max-line-length = 100

# Tell flake8-import-order which modules are "local"
application-import-names = cabinet,tests

# Ignore E203 (Whitespace before `:`) to play nice with Black
# Ignore W503 (Line break before binary operator) to play nice with Black
# Ignore E501 (Maximum line length) to use BugBear's better B950 (Maximum line length with 10% tolerance margin)
# Ignore S101 (Use of `assert`) to play nice with unit tests
ignore = E203,W503,E501,S101

[isort]
profile=black

[mypy]
warn_return_any = True
disallow_untyped_defs = True
follow_imports = silent
ignore_missing_imports = True
